improvement: updated task 2