@@ -1,12 +1,15 @@
 package edu.hw10.Task2;
 
+import java.io.BufferedReader;
 import java.io.FileWriter;
 import java.io.IOException;
 import java.io.PrintWriter;
 import java.lang.reflect.InvocationHandler;
 import java.lang.reflect.Method;
 import java.lang.reflect.Proxy;
+import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.Arrays;
 import java.util.HashMap;
 import java.util.Map;
@@ -16,21 +19,24 @@ public class CacheProxy implements InvocationHandler {
     private final boolean persistCache;
     private final Map<String, Map<Integer, Object>> cache = new HashMap<>();
 
+
     private CacheProxy(Object target, boolean persistCache) {
         this.target = target;
         this.persistCache = persistCache;
+        if (persistCache) {
+            loadCacheFromFile();
+        }
     }
 
-    @SuppressWarnings("unchecked")
     public static <T> T create(Object target, Class<T> interfaceType) {
         boolean persistCache = Arrays.stream(interfaceType.getDeclaredMethods())
             .anyMatch(method -> method.isAnnotationPresent(Cache.class) && method.getAnnotation(Cache.class).persist());
 
-        return (T) Proxy.newProxyInstance(
+        return interfaceType.cast(Proxy.newProxyInstance(
             interfaceType.getClassLoader(),
             new Class<?>[]{interfaceType},
             new CacheProxy(target, persistCache)
-        );
+        ));
     }
 
     @Override
@@ -41,7 +47,6 @@ public class CacheProxy implements InvocationHandler {
 
         Cache cacheAnnotation = method.getAnnotation(Cache.class);
         String methodKey = method.getName();
-
         Map<Integer, Object> methodCache = cache.computeIfAbsent(methodKey, k -> new HashMap<>());
         int key = Arrays.hashCode(args);
 
@@ -49,13 +54,11 @@ public class CacheProxy implements InvocationHandler {
             return methodCache.get(key);
         }
 
-        // Вычисляем значение
         Object result = method.invoke(target, args);
 
-        // Проводим кэширование
         if (cacheAnnotation.persist()) {
             try (PrintWriter writer = createPrintWriter(methodKey)) {
-                persistCache(methodKey, args, writer);
+                persistCache(key, result, writer);
             }
             methodCache.put(key, result);
         }
@@ -63,26 +66,38 @@ public class CacheProxy implements InvocationHandler {
         return result;
     }
 
+    private void persistCache(int key, Object result, PrintWriter writer) {
+        writer.println(key + "=" + result);
+        writer.flush();
+    }
+
     private PrintWriter createPrintWriter(String methodKey) throws IOException {
         String filePath = getCacheFilePath(methodKey);
         return new PrintWriter(new FileWriter(filePath, true));
     }
 
-    private void persistCache(String methodKey, Object[] args, PrintWriter writer) {
-        // Добавляем имя метода в файл
-        writer.println("Method: " + methodKey);
-
-        // Записываем аргументы
-        for (Object arg : args) {
-            writer.println("Arg: " + arg);
-        }
-
-        // Записываем результат
-        writer.println("-----");
-        writer.flush();
+    private String getCacheFilePath(String methodKey) {
+        return Paths.get(".", methodKey + ".txt").toString();
     }
 
-    private String getCacheFilePath(String methodKey) {
-        return Path.of(".", methodKey + ".txt").toString();
+    private void loadCacheFromFile() {
+        String methodKey = "fib";
+        Path path = Paths.get(getCacheFilePath(methodKey));
+        if (Files.exists(path)) {
+            try (BufferedReader reader = Files.newBufferedReader(path)) {
+                Map<Integer, Object> methodCache = cache.computeIfAbsent(methodKey, k -> new HashMap<>());
+                String line;
+                while ((line = reader.readLine()) != null) {
+                    String[] parts = line.split("=");
+                    if (parts.length == 2) {
+                        int key = Integer.parseInt(parts[0]);
+                        long value = Long.parseLong(parts[1]);
+                        methodCache.put(key, value);
+                    }
+                }
+            } catch (IOException e) {
+                System.err.println(e.getMessage());
+            }
+        }
     }
 }
